--- a/html/legalNotice_ notLoggedIn.html
+++ b/html/legalNotice_ notLoggedIn.html
@@ -25,13 +25,13 @@
         <div class="table-container">
             <div>
                 <h1 class="undersection-headline">Imprint</h1>
-                <p class="p-distance"><b>·</b> Max Wirnsberger, Dennis Bilowodskyj, Viktor Ens and Lars Thönnes</p>
-                <p class="p-distance"><b>·</b> Am Deich 24</p>
-                <p class="p-distance"><b>·</b> 40235 Düsseldorf</p>
+                <p class="p-distance"><b>·</b> Max Wirnsberger</p>
+                <p class="p-distance"><b>·</b> Eichetstraße 40</p>
+                <p class="p-distance"><b>·</b> 5071 Wals-Siezenheim</p>
             </div>
             <div>
                 <h1 class="undersection-headline">Exploring the Board</h1>
-                <p>Email: joingroup804@gmail.com</p>
+                <p>Email: maximilian.wirnsberger@gmail.com</p>
             </div>
             <div>
                 <h1 class="undersection-headline">Acceptance of terms</h1>
